Add generate new grid logic
Added event listener to button that removes all child nodes of container div when clicked, and adds new divs in accordance with user input

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <button id="generator">
+    GENERATE NEW GRID
+  </button>
   <div class="container"></div>
+
 </body>
 </html>
